data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1425.wast
;; 6. **Test Description**:     Execute a `loop` containing a nested `block` with a `br_if` to this parent block. Verify the stack state before and after the conditional branch to ensure proper operand count and order are maintained.    - **Constraint Checked**: Correct stack unwinding and re-stacking in combined loop-block contexts.    - **Stack Corruption Check**: Ensures that the loop does not corrupt the stack over repeated iterations.

(assert_invalid
  (module (func $loop_block_br_if
    (loop (block (br_if 1 (i32.const 1))))
  ))
  "type mismatch"
)